# instrument-stellantis-director

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  vercel.json
data/: draftstore.sqlite-shm  twelvelabs_filters.json
data/bg_fixtures/baseline/: audience_resonance.ram.json
data/bg_fixtures/brand/: copy_rules.ram.json  creative_intent.ram.json  design_tokens.ram.json  product_catalog.ram.json  tone_of_voice.ram.json
data/bg_fixtures/great_lakes/: audience_resonance.great_lakes.ram.json  creative_intent.great_lakes.json  environmental_context.great_lakes.json
data/bg_fixtures/midwest/: environmental_context.midwest.json
data/bg_fixtures/northeast/: environmental_context.northeast.json
data/bg_fixtures/southeast/: environmental_context.southeast.json
data/bg_fixtures/southwest/: audience_resonance.southwest.ram.json  creative_intent.southwest.json  environmental_context.southwest.json
data/bg_fixtures/west/: environmental_context.west.json
data/dials/: year_end_demo.json
data/scripts/: map_retail_ram_test_15_south.json
data/styling/: year_end_demo.json
scripts/: run_demo.py
src/director_agent/: __init__.py  config.py  project.py  recommendations.py  twelvelabs.py  validation.py
src/director_agent/api/: __init__.py  app.py  auth.py
src/director_agent/bg/: __init__.py  cache.py  client.py  fixture_provider.py  http_provider.py
src/director_agent/director/: __init__.py  cell_specs.py  director.py  prompt.py
src/director_agent/draftstore/: __init__.py  (+4 more)
tasks/: lessons.md  todo.md
tests/: conftest.py  test_api.py  test_auth.py  test_director_offline.py  test_exports.py  test_fixture_provider.py  test_golden_invariants.py  test_ingest.py  test_lanes.py  test_recommendations.py  test_runner_offline.py  test_schemas.py  test_substance_excel.py  test_twelvelabs_filters.py  test_upstash_store.py
web/: .env.development  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  types.ts
(+21 files in other folders)
